Handling Issue 317[Implement warnings for browsers that are not officially supported.] Update Issue 317 Modification of message Shift message to the top of the page Decision Analysis page edited for unsupported browsers
--HG--
branch : Issue317


Former-commit-id: af0eeb24494a1cbb15ec9fb95c2bca0e49c1ce00
Former-commit-id: d5a42943d0aebe3072abb3177444b0b3071a54ed
Former-commit-id: 53a01f8a76f25e168130467a08d686f1c6a0f823

--- a/src/main/webapp/stylesheets/teammates.css
+++ b/src/main/webapp/stylesheets/teammates.css
@@ -169,7 +169,7 @@ p {
 	font-size: 15px;
 	font-family: Arial, Helvetica, sans-serif;
 	font-weight: bold;
-	padding: 30px 0px;
+	padding: 10px 0px;
 	text-align: right;
 }
 
@@ -221,11 +221,21 @@ p {
 
 #browserMessage{
 	background-color: #FFFF99;
-	margin: 20px auto;
-	padding: 8px;
-	text-align: center;
-	width: 800px;
+	margin: 10px auto;
+	padding: 15px;
+	text-align: left;
+	width: 700px;
 	font-size: 14px;
 	font-weight:bold;
 	line-height: 18px;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
 }
+
+#browserMessage table{
+	margin-left: 50px;
+	margin-top: 10px;
+	width: 700px;
+}
+
